--- a/lang/es.json
+++ b/lang/es.json
@@ -1,34 +1,47 @@
 {
+    "A new verification link has been sent to the email address you provided during registration.": "Se ha enviado un nuevo enlace de verificación al correo electrónico que proporcionaste durante el registro.",
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a tu correo electrónico.",
+    "A reset link will be sent if the account exists.": "Se enviará un enlace de restablecimiento si la cuenta existe.",
+    "Add another option": "Agregar otra opción",
     "Already have an account?": "¿Ya tienes una cuenta?",
+    "Anonymous": "Anónimo",
     "Appearance": "Apariencia",
     "Are you sure you want to delete your account?": "¿Estás seguro de que deseas eliminar tu cuenta?",
+    "auth.password": "La contraseña proporcionada es incorrecta.",
     "Cancel": "Cancelar",
     "Click here to re-send the verification email.": "Haz clic aquí para reenviar el correo de verificación.",
+    "Confirm": "Confirmar",
     "Confirm password": "Confirmar contraseña",
     "Confirm Password": "Confirmar contraseña",
     "Copied!": "¡Copiado!",
-    "Copy embed code": "Copiar código de inserción",
     "Copy": "Copiar",
-
+    "Copy and paste this markup into your newsletter platform. The links will prepopulate the contact email field for each subscriber.": "Copia y pega este marcado en tu plataforma de newsletter. Los enlaces rellenarán automáticamente el campo de correo electrónico para cada suscriptor.",
+    "Copy embed code": "Copiar código de inserción",
     "Create a New Poll": "Crear una nueva encuesta",
     "Create account": "Crear cuenta",
     "Create an account": "Crear una cuenta",
     "Create Poll": "Crear encuesta",
     "Current password": "Contraseña actual",
     "Dark": "Oscuro",
+    "Date": "Fecha",
     "Delete account": "Eliminar cuenta",
     "Delete your account and all of its resources": "Elimina tu cuenta y todos sus recursos",
     "Don't have an account?": "¿No tienes una cuenta?",
     "Email": "Correo electrónico",
     "Email address": "Correo electrónico",
+    "Email Address": "Correo electrónico",
+    "Email password reset link": "Enviar enlace de restablecimiento de contraseña",
+    "Embed in Newsletter": "Insertar en newsletter",
     "Ensure your account is using a long, random password to stay secure": "Asegúrate de que tu cuenta use una contraseña larga y aleatoria para mantenerla segura",
     "Enter your details below to create your account": "Ingresa tus datos para crear tu cuenta",
     "Enter your email and password below to log in": "Ingresa tu correo electrónico y contraseña para iniciar sesión",
+    "Enter your email to receive a password reset link": "Ingresa tu correo electrónico para recibir un enlace de restablecimiento de contraseña.",
     "Fill in the details below to create a new poll.": "Llena los siguientes datos para crear una nueva encuesta.",
+    "Forgot password": "¿Olvidaste tu contraseña?",
     "Forgot your password?": "¿Olvidaste tu contraseña?",
     "Full name": "Nombre completo",
     "Light": "Claro",
+    "log in": "iniciar sesión",
     "Log in": "Iniciar sesión",
     "Log in to your account": "Inicia sesión en tu cuenta",
     "Log out": "Cerrar sesión",
@@ -38,46 +51,46 @@
     "New password": "Nueva contraseña",
     "No options": "Sin opciones",
     "No polls found.": "No se encontraron encuestas.",
+    "No responses for this option yet.": "Aún no hay respuestas para esta opción.",
     "No responses yet.": "Aún no hay respuestas.",
-    "Open Poll": "Abrir encuesta",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Una vez que tu cuenta sea eliminada, todos sus recursos y datos serán eliminados permanentemente. Por favor, ingresa tu contraseña para confirmar que deseas eliminar tu cuenta de forma permanente.",
+    "Open Poll": "Abrir encuesta",
     "Option": "Opción",
+    "Optional": "Opcional",
+    "Options": "Opciones",
     "Options:": "Opciones:",
+    "Or, return to": "O, volver a",
     "Password": "Contraseña",
+    "Percent": "Porcentaje",
+    "Please enter your new password below": "Por favor, ingresa tu nueva contraseña abajo.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Por favor, verifica tu dirección de correo electrónico haciendo clic en el enlace que te acabamos de enviar.",
     "Poll Name": "Nombre de la encuesta",
     "Poll Option 1": "Opción 1",
     "Poll Option 2": "Opción 2",
+    "Poll Options": "Opciones de la encuesta",
     "Poll Question": "Pregunta de la encuesta",
     "Polls": "Encuestas",
-    "Percent": "Porcentaje",
-    "Percent": "Porcentaje",
     "Proceed to Checkout": "Proceder al pago",
     "Profile": "Perfil",
+    "Question": "Pregunta",
     "Remember me": "Recuérdame",
+    "Resend verification email": "Reenviar correo de verificación",
+    "Reset password": "Restablecer contraseña",
     "Responses": "Respuestas",
+    "Responses for": "Respuestas para",
     "Save": "Guardar",
     "Saved.": "Guardado.",
     "Settings": "Configuración",
     "Sign up": "Regístrate",
+    "Submit": "Enviar",
     "System": "Sistema",
+    "Thank you for voting!": "¡Gracias por votar!",
+    "This is a secure area of the application. Please confirm your password before continuing.": "Esta es un área segura de la aplicación. Por favor, confirma tu contraseña antes de continuar.",
+    "Total responses": "Total de respuestas",
     "Update password": "Actualizar contraseña",
     "Update the appearance settings for your account": "Actualiza la configuración de apariencia de tu cuenta",
     "Update your name and email address": "Actualiza tu nombre y correo electrónico",
     "You need to subscribe to our service to continue.": "Necesitas suscribirte a nuestro servicio para continuar.",
-    "Your email address is unverified.": "Tu correo electrónico no está verificado.",
-    "Question": "Pregunta",
-    "Options": "Opciones",
-    "Poll Options": "Opciones de la encuesta",
-    "Add another option": "Agregar otra opción",
     "Your email": "Tu correo electrónico",
-    "Optional": "Opcional",
-    "Thank you for voting!": "¡Gracias por votar!",
-    "Total responses": "Total de respuestas",
-    "Submit": "Enviar",
-    "Responses for": "Respuestas para",
-    "Date": "Fecha",
-    "No responses for this option yet.": "Aún no hay respuestas para esta opción.",
-    "Anonymous": "Anónimo",
-    "Embed in Newsletter": "Insertar en newsletter",
-    "Copy and paste this markup into your newsletter platform. The links will prepopulate the contact email field for each subscriber.": "Copia y pega este marcado en tu plataforma de newsletter. Los enlaces rellenarán automáticamente el campo de correo electrónico para cada suscriptor."
+    "Your email address is unverified.": "Tu correo electrónico no está verificado."
 }
